# ocr-clip

./: README.md  pyproject.toml  screen_ocr_clipboard.py
screen_ocr_clipboard/: main.py
